# pinns-qpinns-benchmark

./: .gitignore  README.md  config.py  data_utils.py  energy_estimator.py  gpt_model.py  gqe_generator.py  main.py  pinn_model.py  pyproject.toml  qpinn_model.py  requirements.txt  setup.py
